--- a/src/scss/default/_code.scss
+++ b/src/scss/default/_code.scss
@@ -1,8 +1,5 @@
-@import '../globals';
-@import '../colors';
-
 code {
   font-size: 87.5%;
   word-wrap: break-word;
-  color: $code-color!important;
+  color: var(--code-color)!important;
 }
