--- a/src/views/pages/publications/_publications.scss
+++ b/src/views/pages/publications/_publications.scss
@@ -1,22 +1,19 @@
-@import '../../../scss/colors';
-@import '../../../scss/globals';
-
 .year-selector {
-  color: $color-text-main!important;
+  color: var(--color-text-main)!important;
   cursor: pointer;
-  transition: $time-fast;
-  border-radius: $border-radius;
-  font-weight: $font-weight-medium;
+  transition: var(--time-fast);
+  border-radius: var(--border-radius);
+  font-weight: var(--font-weight-medium);
   font-size: 110%;
   padding: 6px 13px!important;
 
   &:hover {
-    background: $color-primary-light!important;
+    background: var(--color-primary-light)!important;
     color: #fff!important;
   }
 
   &.active {
-    background: $color-primary!important;
+    background: var(--color-primary)!important;
     color: #fff!important;
   }
 }
