--- a/src/scss/components/_calendar.scss
+++ b/src/scss/components/_calendar.scss
@@ -1,4 +1,3 @@
-@import '../colors';
 @import '../globals';
 
 .calendar {
@@ -13,7 +12,7 @@
     cursor: pointer;
 
     &:hover {
-      color: $color-primary;
+      color: var(--color-primary);
     }
   }
 
@@ -27,25 +26,26 @@
     cursor: pointer;
     border-radius: $border-radius;
     transition: $time-mid;
-    border: 1px solid $transparent;
+    // Accessing variables this way is dumb.
+    border: 1px solid var(--transparent);
 
     &.appointment {
-      border-color: $color-primary;
-      color: $color-primary;
+      border-color: var(--color-primary);
+      color: var(--color-primary);
 
       &:hover {
-        background: $color-primary;
+        background: var(--color-primary);
         color: #fff;
       }
     }
 
     &.selected {
-      background: $color-primary!important;
+      background: var(--color-primary)!important;
       color: #fff!important;
     }
 
     &:hover:not(.appointment) {
-      background: $color-primary-very-light;
+      background: var(--color-primary-very-light);
     }
   }
 }
