--- a/src/scss/components/_conf-card.scss
+++ b/src/scss/components/_conf-card.scss
@@ -1,4 +1,3 @@
-@import '../colors';
 @import '../globals';
 
 .kbl-conf-card {
@@ -27,12 +26,12 @@
     font-size: 150%;
     font-weight: $font-weight-heavy;
 
-    background: $color-bg-main;
+    background: var(--color-bg-main);
     width: 80%;
     text-align: center;
     border-radius: $border-radius;
-    border: 1px solid $color-border-gray;
-    color: $color-text-main;
+    border: 1px solid var(--color-border-gray);
+    color: var(--color-text-main);
   }
 
   .year-banner.date {
@@ -44,14 +43,14 @@
   .conf-authors {
     font-size: 110%;
     font-family: "Montserrat";
-    color: $color-text-main;
+    color: var(--color-text-main);
   }
 
   .conf-location {
-    color: $color-text-soft;
+    color: var(--color-text-soft);
   }
 
   .conf-desc {
-    color: $color-text-main;
+    color: var(--color-text-main);
   }
 }
