--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,7 @@
 @import './colors';
+@import './new-colors';
 @import './globals';
+@import './new-globals';
 
 @import './export-kbl';
 @import './animations/export';
