--- a/src/scss/kbl/_ctx-menu.scss
+++ b/src/scss/kbl/_ctx-menu.scss
@@ -1,14 +1,11 @@
-@import '../colors';
-@import '../globals';
-
 .kbl-ctx-menu {
   position: absolute;
   z-index: 1000;
   display: none;
   background: #fff;
 
-  border-radius: $border-radius;
-  border: 1px solid $color-primary;
+  border-radius: var(--border-radius);
+  border: 1px solid var(--color-primary);
   padding: 0;
   overflow: hidden;
 
@@ -18,23 +15,23 @@
 
   .ctx-heading {
     text-align: center;
-    font-weight: $font-weight-heavy;
+    font-weight: var(--font-weight-heavy);
     font-size: 110%;
     padding: 8px 0;
-    color: $color-text-main;
+    color: var(--color-text-main);
 
-    border-bottom: 1px solid $color-border-gray;
+    border-bottom: 1px solid var(--color-border-gray);
   }
 
   .menu-item {
-    font-weight: $font-weight-medium;
+    font-weight: var(--font-weight-medium);
     padding: 5px 15px;
     cursor: pointer;
-    transition: $time-mid;
+    transition: var(--time-mid);
 
     &:hover {
-      background: $color-bg-gray;
-      color: $color-primary;
+      background: var(--color-bg-gray);
+      color: var(--color-primary);
     }
   }
 
