--- a/src/scss/kbl/_header-icon.scss
+++ b/src/scss/kbl/_header-icon.scss
@@ -1,7 +1,4 @@
-@import '../colors';
-@import '../globals';
-
 .kbl-header-icon {
-  color: $color-primary;
+  color: var(--color-primary);
   font-size: 320%;
 }
