--- a/src/scss/kbl/_modal.scss
+++ b/src/scss/kbl/_modal.scss
@@ -1,7 +1,4 @@
-@import '../colors';
-@import '../globals';
-
 .modal-content {
-  border-radius: $border-radius!important;
+  border-radius: var(--border-radius)!important;
   border: none!important;
 }
