--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,5 @@
-@import './new-colors';
-@import './new-globals';
+@import './colors';
+@import './globals';
 
 @import './export-kbl';
 @import './animations/export';
