--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,9 +10,21 @@
 
 @import '../views/pages/people/people';
 
+ul, ol {
+  list-style: none; }
+
+img {
+  max-width: 100%; }
+
 body {
   color: var(--color-text-main);
   overflow-x: hidden;
+  font-size: 1rem;
+  font-family: "Open Sans", sans-serif;
+  background-color: #ffffff;
+  line-height: 1.788;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .section-footer {
@@ -68,6 +80,22 @@ body {
       color: var(--color-primary)!important;
     }
   }
+}
+
+html {
+  font-size: 14px;
+}
+
+@media (max-width: 768px) {
+  html {
+    font-size: 14px;
+  }
+}
+
+.navbar-nav {
+  padding-right: 20px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
 }
 
 ::selection {
