--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -34,6 +34,7 @@ $color-secondary: #3b4961;
   --code-color: #ee316f;
 
   --color-border-gray: #d1d1d1;
+  --color-border-dark-gray: #9c9c9c;
 
   --color-bg-gray: #f2f2f2;
 
