--- a/src/scss/components/_calendar.scss
+++ b/src/scss/components/_calendar.scss
@@ -47,3 +47,13 @@
     }
   }
 }
+
+.time-arrow {
+  font-size: 200%;
+  cursor: pointer;
+  transition: var(--time-mid);
+
+  &:hover {
+    color: var(--color-primary);
+  }
+}
