--- a/src/views/components/calendar-small.njk
+++ b/src/views/components/calendar-small.njk
@@ -52,7 +52,27 @@
             </div>
             <div class="row my-4">
               <div class="col-12">
+                <div class="row">
+                  <div class="col-auto my-auto">
+                    Time:
+                  </div>
+                  <div class="col-auto text-center">
+                    <i class="fas fa-angle-up time-arrow"></i>
+                    <input class="form-control time-form" placeholder="00">
+                    <i class="fas fa-angle-down time-arrow"></i>
+                  </div>
+
+                  <div class="col-auto text-center">
+                    <i class="fas fa-angle-up time-arrow"></i>
+                    <input class="form-control time-form" placeholder="12">
+                    <i class="fas fa-angle-down time-arrow"></i>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12">
                 <input class="form-control kbl-form" placeholder="Name" id="appointmentName"/>
+              </div>
+              <div class="col-12">
                 <textarea class="form-control kbl-form" placeholder="Purpose of meeting" id="appointmentDesc"></textarea>
               </div>
             </div>
