--- a/src/views/pages/contact/contact.njk
+++ b/src/views/pages/contact/contact.njk
@@ -31,7 +31,7 @@
           honours and undergraduate students are welcome to join our group.
         </p>
 
-        <img src="assets/img/bio_tech_fall.JPG"  alt="" class="img-fluid my-5">
+        <img src="assets/img/bio_tech_fall.JPG"  alt="" class="img-fluid my-5 img-round">
 
         <h2 class="kbl-heading dark">Masters and Honors</h2>
         <p class="kbl-text">
@@ -48,7 +48,7 @@
           </b>
         </p>
 
-        <img src="assets/img/colorful.JPG"  alt="" class="img-fluid my-5">
+        <img src="assets/img/colorful.JPG"  alt="" class="img-fluid my-5 img-round">
 
         <h2 class="kbl-heading dark">PhD</h2>
         <p class="kbl-text">
@@ -117,7 +117,7 @@
 
         <a href="/contact#enroll" class="btn kbl-btn-1-solid text-left mt-4">Go to Contact Form</a>
 
-        
+
         <div class="my-5"></div>
 
         <h4 class="kbl-heading pt-5 pb-3 text-center">Set an Appointment!</h4>
@@ -132,7 +132,7 @@
         {% include "./_contact-form.njk" %}
       </div>
       <div class="col">
-        <div class="embed-responsive embed-responsive-1by1">
+        <div class="embed-responsive embed-responsive-1by1 img-round">
           <iframe src="http://maps.google.com/maps?q=41.742693,-111.810340&amp;z=15&amp;output=embed" allowfullscreen="" frameborder="0"></iframe>
         </div>
       </div>
