--- a/src/views/pages/research/research.njk
+++ b/src/views/pages/research/research.njk
@@ -57,7 +57,7 @@
                   <div class="col-sm-6">
                       <figure class="samevide-figure">
                           <img src="assets/img/doctor.jpg" style="width: 570px; height: 323px;" alt=""
-                              class="img-responsive">
+                              class="img-responsive img-round">
                       </figure>
                   </div>
               </div>
