--- a/src/views/pages/home/the-team.njk
+++ b/src/views/pages/home/the-team.njk
@@ -4,7 +4,7 @@
             <div class="col-10 col-sm-9 col-md-6 col-lg-4 col-xl-4">
                 <article class="sabbi-thumlinepost-card solitude-bg__x">
                     <figure class="sabbi-thumlinepost-card-figure">
-                        <img alt="" class="img-responsive img-thumpost" style="width: 557px; height: 360px;" src="assets/img/profile/RK_2.jpg">
+                        <img alt="" class="img-responsive img-thumpost img-round" style="width: 557px; height: 360px;" src="assets/img/profile/RK_2.jpg">
                     </figure>
                     <h2 class="entry-title kbl-text" style="font-size: 15px;">Dr. Rakesh Kaundal</h2>
                     <div class="card_st_fix kbl-text">Rakesh is an Assistant Professor of Bioinformatics in the Department of Plants, Soils, and Climate at Utah State University,
