Add email field

--- a/src/views/components/calendar-small.njk
+++ b/src/views/components/calendar-small.njk
@@ -71,15 +71,14 @@
               </div>
               <div class="col-12">
                 <input class="form-control kbl-form" placeholder="Name" id="appointmentName"/>
-              </div>
-              <div class="col-12">
+                <input class="form-control kbl-form" placeholder="Email" id="appointmentEmail"/>
                 <textarea class="form-control kbl-form" placeholder="Purpose of meeting" id="appointmentDesc"></textarea>
               </div>
             </div>
             <div class="row my-2">
               <div class="col text-right">
                 <button type="button" class="btn kbl-btn-2-solid mr-3" data-dismiss="modal">Close</button>
-                <button type="button" class="btn kbl-btn-1" id="createAppointmentButton">Create Appointment</button>
+                <button type="button" class="btn kbl-btn-1" id="createAppointmentButton">Request Appointment</button>
               </div>
             </div>
           </section>
